--- a/05 - HelloTiles/pom.xml
+++ b/05 - HelloTiles/pom.xml
@@ -6,8 +6,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<properties>
-		<spring.version>3.2.13.RELEASE</spring.version>
+		<spring.version>4.1.4.RELEASE</spring.version>
 		<jstl.version>1.2</jstl.version>
+		<log4j.version>1.2.17</log4j.version>
+		<tiles.version>3.0.5</tiles.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -19,6 +21,31 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>${jstl.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-jsp</artifactId>
+			<version>${tiles.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-servlet</artifactId>
+			<version>${tiles.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-template</artifactId>
+			<version>${tiles.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-el</artifactId>
+			<version>${tiles.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
