--- a/08 - HelloJPA/pom.xml
+++ b/08 - HelloJPA/pom.xml
@@ -9,6 +9,7 @@
 		<spring.version>4.1.4.RELEASE</spring.version>
 		<log4j.version>1.2.17</log4j.version>
 		<jstl.version>1.2</jstl.version>
+		<apache.commons>3.4</apache.commons>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -26,6 +27,11 @@
 			<artifactId>log4j</artifactId>
 			<version>${log4j.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${apache.commons}</version>
+		</dependency>		
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
