--- a/08 - HelloJPA/pom.xml
+++ b/08 - HelloJPA/pom.xml
@@ -88,12 +88,31 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.6.4</version>
 		</dependency>
-		
+
+		<!-- Spring JDBC -->
 		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-jdbc</artifactId>
+		    <version>4.1.4.RELEASE</version>
+		</dependency>
+		
+		<!-- HyperSQL DB -->
+		<dependency>
+		    <groupId>org.hsqldb</groupId>
+		    <artifactId>hsqldb</artifactId>
+		    <version>2.3.2</version>
+		</dependency>  		
+		
+		
+		<!--
+ 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.10</version>
-		</dependency>
+		</dependency> 
+		-->
+		
+		
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
