--- a/10 - HelloRestFullServer/.project
+++ b/10 - HelloRestFullServer/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>10 - HelloRestFullServer</name>
+	<name>HelloRestFullServer</name>
 	<comment></comment>
 	<projects>
 	</projects>
